--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,11 @@
             color: #9c6ade; /* Средне-фиолетовый */
             border-left: 5px solid #9c6ade; /* Полоса слева */
             padding-left: 10px;
+                        ul li,
+        ol li {
+    margin-bottom: 6px;   /* расстояние между пунктами */
+    line-height: 1.5;     /* комфортная высота строки */
+}
         }
         .course {
             padding: 15px;
